Updating controller layer
